--- a/topino/ui/mainwindow.ui
+++ b/topino/ui/mainwindow.ui
@@ -206,8 +206,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>253</width>
-       <height>331</height>
+       <width>248</width>
+       <height>350</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -226,7 +226,7 @@
       <number>1</number>
      </property>
      <property name="currentIndex">
-      <number>2</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="general">
       <layout class="QGridLayout" name="gridLayout_4">
@@ -523,39 +523,6 @@
      </widget>
      <widget class="QWidget" name="multiple">
       <layout class="QGridLayout" name="gridLayout_5">
-       <item row="0" column="1" colspan="3">
-        <widget class="QLabel" name="label_23">
-         <property name="text">
-          <string>Multiple objects</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <spacer name="horizontalSpacer_3">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="4" column="2">
-        <spacer name="verticalSpacer_4">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>99</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
        <item row="0" column="0">
         <widget class="QLabel" name="label_16">
          <property name="minimumSize">
@@ -577,28 +544,110 @@
           <enum>Qt::PlainText</enum>
          </property>
          <property name="pixmap">
-          <pixmap resource="../topino.qrc">:/ui/toolicons/ruler.png</pixmap>
+          <pixmap resource="../topino.qrc">:/ui/toolicons/cursor.png</pixmap>
          </property>
          <property name="scaledContents">
           <bool>false</bool>
          </property>
         </widget>
        </item>
-       <item row="2" column="2" colspan="2">
-        <widget class="QPushButton" name="pushButton">
+       <item row="3" column="0" colspan="4">
+        <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="0,0,0">
+         <item>
+          <widget class="QToolButton" name="toolSelectAllInlets">
+           <property name="toolTip">
+            <string>Select only inlets</string>
+           </property>
+           <property name="statusTip">
+            <string>Selects all inlets in the current selection</string>
+           </property>
+           <property name="text">
+            <string>...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../topino.qrc">
+             <normaloff>:/ui/toolicons/inlet.png</normaloff>:/ui/toolicons/inlet.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>64</width>
+             <height>32</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QToolButton" name="toolSelectAllRulers">
+           <property name="toolTip">
+            <string>Select only rulers</string>
+           </property>
+           <property name="statusTip">
+            <string>Selects all rulers in the current selection</string>
+           </property>
+           <property name="text">
+            <string>...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../topino.qrc">
+             <normaloff>:/ui/toolicons/ruler.png</normaloff>:/ui/toolicons/ruler.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>64</width>
+             <height>32</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>72</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item row="0" column="1" colspan="3">
+        <widget class="QLabel" name="label_23">
          <property name="text">
-          <string>Select all rulers</string>
+          <string>Multiple objects</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="2" colspan="2">
-        <widget class="QPushButton" name="pushButton_2">
-         <property name="text">
-          <string>Select all inlets</string>
+       <item row="2" column="0" colspan="4">
+        <spacer name="verticalSpacer_14">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
          </property>
-        </widget>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
        </item>
-       <item row="1" column="2" colspan="2">
+       <item row="4" column="0" colspan="4">
+        <spacer name="verticalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>200</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="1" column="3">
         <widget class="QLabel" name="propObjectsAmount">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -613,10 +662,26 @@
           </size>
          </property>
          <property name="text">
-          <string>%d objects selected</string>
+          <string>%d</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0" colspan="3">
+        <widget class="QLabel" name="label_60">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>1</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>Objects:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
@@ -841,7 +906,7 @@
          <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
-           <height>110</height>
+           <height>90</height>
           </size>
          </property>
         </spacer>
@@ -943,7 +1008,7 @@
       <zorder>label_27</zorder>
       <zorder>propRulerAngle</zorder>
      </widget>
-     <widget class="QWidget" name="page">
+     <widget class="QWidget" name="inlet">
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="6" column="2">
         <widget class="QLabel" name="propInletAngleRange">
@@ -1299,7 +1364,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="page_2">
+     <widget class="QWidget" name="angulagram">
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="1">
         <widget class="QLabel" name="label_17">
@@ -1470,6 +1535,19 @@
          </property>
         </widget>
        </item>
+       <item row="5" column="0" colspan="3">
+        <spacer name="verticalSpacer_13">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>160</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
        <item row="1" column="0" colspan="2">
         <widget class="QLabel" name="label_18">
          <property name="sizePolicy">
@@ -1486,18 +1564,187 @@
          </property>
         </widget>
        </item>
-       <item row="5" column="0" colspan="3">
-        <spacer name="verticalSpacer_13">
+      </layout>
+     </widget>
+     <widget class="QWidget" name="multirulers">
+      <layout class="QGridLayout" name="gridLayout_13" rowstretch="0,0,0,0,0,0" columnstretch="0,0,0,0">
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_55">
+         <property name="minimumSize">
+          <size>
+           <width>32</width>
+           <height>24</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>32</width>
+           <height>24</height>
+          </size>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="textFormat">
+          <enum>Qt::PlainText</enum>
+         </property>
+         <property name="pixmap">
+          <pixmap resource="../topino.qrc">:/ui/toolicons/ruler.png</pixmap>
+         </property>
+         <property name="scaledContents">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0" colspan="3">
+        <spacer name="verticalSpacer_28">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
-           <width>20</width>
-           <height>160</height>
+           <width>221</width>
+           <height>8</height>
           </size>
          </property>
         </spacer>
+       </item>
+       <item row="4" column="0" colspan="4">
+        <layout class="QHBoxLayout" name="horizontalLayout_11" stretch="0,0,0">
+         <item>
+          <widget class="QToolButton" name="toolRulersInletAtIntersection">
+           <property name="toolTip">
+            <string>Create an inlet near the rulers' intersection</string>
+           </property>
+           <property name="statusTip">
+            <string>Creates an inlet near the intersection points of all rulers</string>
+           </property>
+           <property name="text">
+            <string>...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../topino.qrc">
+             <normaloff>:/ui/toolicons/ruler.png</normaloff>:/ui/toolicons/ruler.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>64</width>
+             <height>32</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_4">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>72</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_3">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>72</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item row="1" column="0" colspan="2">
+        <widget class="QLabel" name="label_58">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>1</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>Rulers:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="2" colspan="2">
+        <widget class="QLabel" name="propRulersAmount">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>5</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>%d</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0" colspan="3">
+        <spacer name="verticalSpacer_29">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>221</width>
+           <height>189</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="1" colspan="2">
+        <widget class="QLabel" name="label_56">
+         <property name="text">
+          <string>Multiple rulers</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0" colspan="2">
+        <widget class="QLabel" name="label_59">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>1</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>Intersections:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="2" colspan="2">
+        <widget class="QLabel" name="propRulersIntersections">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>5</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>%d</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -2063,6 +2310,54 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>toolRulersInletAtIntersection</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>onToolInletAtIntersection()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>734</x>
+     <y>405</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>471</x>
+     <y>369</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>toolSelectAllInlets</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>onToolSelectOnlyInlets()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>734</x>
+     <y>394</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>471</x>
+     <y>369</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>toolSelectAllRulers</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>onToolSelectOnlyRulers()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>812</x>
+     <y>394</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>471</x>
+     <y>369</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>onQuit()</slot>
@@ -2089,5 +2384,8 @@
   <slot>onToolRulerAsMinBoundary()</slot>
   <slot>onToolRulerAsMaxBoundary()</slot>
   <slot>onToolExtendInletToRuler()</slot>
+  <slot>onToolInletAtIntersection()</slot>
+  <slot>onToolSelectOnlyRulers()</slot>
+  <slot>onToolSelectOnlyInlets()</slot>
  </slots>
 </ui>
